Added board class with (i,j) grid coordinates
- The board is now a 2d 3x3 array with (i,j) coordinates:
    Replaces previous 1d array with length of 9 for easier understandability
- The board class contains methods to interact with the board:
    This makes the code clearer and more organized

--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
             Tic Tac Toe
         </h1>
         <div id="board">
-            <div class="box" id="box_0" onclick="boxPressed(0)"></div>
-            <div class="box" id="box_1" onclick="boxPressed(1)"></div>
-            <div class="box" id="box_2" onclick="boxPressed(2)"></div>
-            <div class="box" id="box_3" onclick="boxPressed(3)"></div>
-            <div class="box" id="box_4" onclick="boxPressed(4)"></div>
-            <div class="box" id="box_5" onclick="boxPressed(5)"></div>
-            <div class="box" id="box_6" onclick="boxPressed(6)"></div>
-            <div class="box" id="box_7" onclick="boxPressed(7)"></div>
-            <div class="box" id="box_8" onclick="boxPressed(8)"></div>
+            <div class="box" id="box_0" onclick="boxPressed(0,0)"></div>
+            <div class="box" id="box_1" onclick="boxPressed(0,1)"></div>
+            <div class="box" id="box_2" onclick="boxPressed(0,2)"></div>
+            <div class="box" id="box_3" onclick="boxPressed(1,0)"></div>
+            <div class="box" id="box_4" onclick="boxPressed(1,1)"></div>
+            <div class="box" id="box_5" onclick="boxPressed(1,2)"></div>
+            <div class="box" id="box_6" onclick="boxPressed(2,0)"></div>
+            <div class="box" id="box_7" onclick="boxPressed(2,1)"></div>
+            <div class="box" id="box_8" onclick="boxPressed(2,2)"></div>
         </div>
         <div id="button-container">
             <button onclick="resetBoard()">Play again!</button>
         </div>
     </div>
+    <script src="board.js"></script>
     <script src="main.js"></script>
+    <script src="ai.js"></script>
 </body>
 
 </html>
