First working version of AI using minimax algorithm
-The player always plays first
-The two possible outcomes are a tie or the ai wins
TODO: Allow the player to play second

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <script src="board.js"></script>
     <script src="main.js"></script>
-    <script src="ai.js"></script>
+    <script src="minimax.js"></script>
 </body>
 
 </html>
